--- a/src/pexels/Pexels.form
+++ b/src/pexels/Pexels.form
@@ -45,6 +45,9 @@
                 <Property name="text" type="java.lang.String" value="Guardar como"/>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Menu_File_SaveAsActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
