--- a/src/pexels/Pexels.form
+++ b/src/pexels/Pexels.form
@@ -123,6 +123,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="Menu_Filter_Laplace">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Laplace"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Menu_Filter_LaplaceActionPerformed"/>
@@ -131,6 +132,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="Menu_Filter_Prewitt">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Prewitt"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Menu_Filter_PrewittActionPerformed"/>
@@ -139,17 +141,19 @@
             <MenuItem class="javax.swing.JMenuItem" name="Menu_Filter_Roberts">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Roberts"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Menu_Filter_RobertsActionPerformed"/>
               </Events>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="Menu_Filer_Sobel">
+            <MenuItem class="javax.swing.JMenuItem" name="Menu_Filter_Sobel">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Sobel"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Menu_Filer_SobelActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Menu_Filter_SobelActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
